Update generated documentation
